--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>This is my second refo</title>
 </head>
 <body>
-    
+    <h1>This is header 1</h1>
+    <h2>This is header 2</h2>
+    <h3>This is header 3</h3>
 </body>
 </html>
