--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>This is header 1</h1>
     <h2>This is header 2</h2>
     <h3>This is header 3</h3>
+    <p>This is a paragraph</p>
 </body>
 </html>
